--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Publish Jazzy Docs
       uses: steven0351/publish-jazzy-docs@v1
       with:
-        personal_access_token: ${{ secrets.GITHUB_TOKEN }}
+        personal_access_token: ${{ secrets.token }}
