--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,11 +1,12 @@
 name: Publish Documentation
 
 on: 
-  release: [created]
+  release: 
+    types: [created]
 
 jobs:
   deploy_docs:
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
     - name: Publish Jazzy Docs
